--- a/index.html
+++ b/index.html
@@ -53,16 +53,17 @@
             </div>
           </div>
 
-          <div class="inner cover">
+          <div id="app" class="inner cover">
             <h1 class="cover-heading">Enter a whole number</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+
+            
             
             <div class="form-group">
-                <input type="text" name="converter" class="form-control input-lg" placeholder="12">
+                <input v-model="message" type="text" name="converter" class="form-control input-lg" placeholder="12">
             </div>
 
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Convert!</a>
+              {{ message }}
             </p>
           </div>
 
@@ -86,5 +87,14 @@
     <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.20/vue.js"></script>
+    <script>
+      new Vue({
+        el: '#app',
+        data: {
+          message: 'Hello Vue.js!'
+        }
+      })
+    </script>
   </body>
 </html>
