Link roman numeral function to Vue's data binding

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         },
         computed: {
           romanNumeral: function() {
-            return (+this.number) + 1;
+            return convert(this.number);
           }
         }
       })
