--- a/index.html
+++ b/index.html
@@ -11,28 +11,33 @@
 
   <body>
 
-    <div class="site-wrapper">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Roman Numeral Converter</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
 
-      <div class="site-wrapper-inner">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <div class="starter-template" id="app">
 
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">Roman Numeral Converter</h3>
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Features</a></li>
-                  <li><a href="#">Contact</a></li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-
-          <div id="app" class="inner cover">
-            <h1 class="cover-heading">Enter a whole number</h1>
-
+            <h1>Enter a number...</h1>
             <div class="form-group">
                 <input v-model="number" type="text" name="converter" class="form-control input-lg" placeholder="12">
             </div>
@@ -40,26 +45,18 @@
             <p class="lead" v-show="number">
               {{ romanNumeral }}
             </p>
+            
           </div>
-
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            </div>
-          </div>
-
         </div>
-
       </div>
-
-    </div>
+    </div><!-- /.container -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.20/vue.js"></script>
     <script>
       new Vue({
         el: '#app',
         data: {
-          number: 1
+          number: 4
         },
         computed: {
           romanNumeral: function() {
